--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Aliibraabbas/os-Cooking_Recipes#readme",
   "dependencies": {
+    "axios": "^1.7.2",
     "jest": "^29.7.0"
   },
   "devDependencies": {
